# ws-contracts

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.claude/: plan-v2-multicompany.md  plan-v2-visual.html
src/ws_contracts/: __init__.py  cli.py  config.py  field_mapping.py  field_setup.py  models.py  odoo_client.py  upload.py
src/ws_contracts/pdf/: __init__.py  base.py  contract.py  contract_sections.py  nda.py  nda_sections.py  styles.py
tests/: conftest.py  test_cli.py  test_contract_pdf.py  test_field_mapping.py  test_models.py  test_nda_pdf.py  test_odoo_client.py  test_pdf_base.py  test_upload.py
tests/fixtures/: sample_employee.json
ws_contracts_odoo/: __manifest__.py  requirements.txt
ws_contracts_odoo/data/: contract_template_ws.xml  cron.xml  nda_template_ws.xml
ws_contracts_odoo/lib/: contract_text.py  docx_generator.py  nda_text.py  pdf_generators.py  theme.py
ws_contracts_odoo/models/: __init__.py  contract_document.py  contract_template.py  contract_template_section.py  hr_employee.py
ws_contracts_odoo/security/: ir.model.access.csv  ir_rules.xml
ws_contracts_odoo/static/templates/: Developer_Cheatsheet.md.docx  Szablon_Umowa_Probna_1m_PL_EN.docx  Szablon_Umowa_Probna_2m_PL_EN.docx  Szablon_Umowa_Probna_2plus1_PL_EN.docx  Szablon_Umowa_Probna_3m_PL_EN.docx  (+3 more)
ws_contracts_odoo/views/: contract_document_views.xml  contract_template_views.xml  generate_wizard_views.xml  hr_employee_views.xml  server_actions.xml  smart_wizard_views.xml
ws_contracts_odoo/wizards/: __init__.py  generate_wizard.py  smart_wizard.py
